@@ -3,6 +3,10 @@ Pkgcore Release Notes
 
 See ChangeLog for full commit logs; this is summarized/major changes.
 
+* work around eselect incompatibility for root not always being specified
+  to `pinspect portageq get_repositories`.
+
+
 pkgcore 0.7.7.6: Jan 16th, 2011
 
 * fix bug where REQUIRED_USE wasn't being stored during metadata
